[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/World.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.196078 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.3, 0.3, 0.3, 1 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="ButtonCover" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 12.0
margin_bottom = 20.0
action_mode = 0

[node name="DragRect" type="PanelContainer" parent="."]
margin_right = 14.0
margin_bottom = 14.0
custom_styles/panel = SubResource( 1 )

[connection signal="pressed" from="ButtonCover" to="." method="_on_ButtonCover_pressed"]
